--- a/css/base.css
+++ b/css/base.css
@@ -48,7 +48,7 @@ input {
 body {
     /* CSS3 抗锯齿形 让文字显示的更加清晰 */
     -webkit-font-smoothing: antialiased;
-    background-color: #fff;
+    background-color: rgb(245, 245, 245);
     font: 12px/1.5 Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
     color: #666
 }
