--- a/css/index.css
+++ b/css/index.css
@@ -603,7 +603,83 @@ main {
 .module-list li:hover img{
 	right: 5px;
 }
+/*品牌旗舰店开始*/
+.floor-QJD{
+	height: 694px;
+}
+.shop-list{
+	width: 100%;
+	height: 694px;
+}
+.shop-list .shop-item{
+	float: left;
+	width: 613px;
+	height: 326px;
+	padding: 10px;
+	margin-right: 1px;
+	margin-bottom: 1px;
+	background: #fff;
+}
 
+/*旗舰店的头部*/
+.shop-header{
+	width: 100%;
+	height: 50px;
+}
+.shop-logo{
+	float: left;
+	max-width: 100px;
+	max-height: 50px;
+}
+.shop-meta{
+	padding: 0 0 0 10px;
+}
+.enter-btn{
+	float: right;
+	width: 80px;
+	height: 30px;
+	margin-top: 10px;
+	line-height: 30px;
+	text-align: center;
+	color: #666;
+	background: #eee;
+}
+/*旗舰店的商品列表*/
+.goods-list{
+	margin: 5px -3px;
+}
+.goods-list li{
+	float: left;
+	width: 190px;
+	height: 266px;
+	margin: 0 5px; 
+}
+.goods-list img{
+	width: 185px;
+	height: 196px;
+	transition: opacity .3s ease-out;
+}
+.goods-desc{
+	margin-top: 5px;
+}
+.goods-desc h5{
+	height: 36px;
+	font-size: 12px;
+	font-weight: normal;
+	color: #000;
+	overflow: hidden;
+}
+.goods-desc .price{
+	font-size: 16px;
+	font-weight: bold;
+	color: red;
+}
+.goods-list li:hover img{
+	/* 透明度 */
+	opacity: 0.6;
+	filter: alpha(opacity=60);
+}
+/*旗舰店结束*/
 /*各个分类层大标题前的color-mark与banner的推荐内容的背景*/
 .floor-QZSG .color-mark,
 .floor-QZSG .hot-recommend{
